adding all the structure in the index.html file to jump into styles

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
         <span id="leg-two"></span> <!--Leg-->
     </div>
     <div class="guess-word">
-        
+        <p>Guess the fruit name</p>
+        <span class="wordSpotlight"></span>
     </div>
+
+    <div class="keyboard-box">
+        <!-- insert keyboard buttons-->
+    </div>
+</div>
+
+<div class="result-box">
+    <h1 class="message">You Win!</h1>
+    <span>The word was <span class="result-answer">Javascript</span></span>
+    <button class="new game-btn" onclick="newGame()">NEW GAME</button>
 </div>
