--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+    <header>
+        <meta name="viewport" content="">
+        <link rel="stylesheet" href="./style.css">
+        
+    </header>
+    <body>
 <div class="container">
     <span class="wrong-guesses" >Wrong Guesses : <span class="mistake" style="font-weight:600">0</span> of <span class="max-wrong" style="font-weight:600"></span></span>
     <button class="reset-btn" onclick="reset()">Reset</button>
@@ -29,3 +37,5 @@
     <span>The word was <span class="result-answer">Javascript</span></span>
     <button class="new game-btn" onclick="newGame()">NEW GAME</button>
 </div>
+</body>
+</html>
