fixing some bugs, changing some tags and names, adding new methods

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <header>
-        <meta name="viewport" content="">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Challenge Alura 2 ~AhorcadoGame~</title>
         <link rel="stylesheet" href="./style.css">
-        
     </header>
     <body>
 <div class="container">
@@ -23,7 +24,7 @@
         <span id="leg-two"></span> <!--Leg-->
     </div>
     <div class="guess-word">
-        <p>Guess the fruit name</p>
+        <p>Adivina el nombre del lenguaje de Programacion</p>
         <span class="wordSpotlight"></span>
     </div>
 
@@ -37,5 +38,6 @@
     <span>The word was <span class="result-answer">Javascript</span></span>
     <button class="new game-btn" onclick="newGame()">NEW GAME</button>
 </div>
+<script src="./script.js"></script>
 </body>
 </html>
