--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <link rel="stylesheet" href="./style.css">
     </header>
     <body>
+        <header>
+            <img class="logo" src="./assets/Vectorlogo.png" alt="alura-logo" />
+            <!--<label class="toggle">
+                <input type="checkbox" onclick="toggleDarkLight()">
+                <span class="slider round"></span>
+            </label>-->
+                </header>
 <div class="container">
     <span class="wrong-guesses" >Wrong Guesses : <span class="mistake" style="font-weight:600">0</span> of <span class="max-wrong" style="font-weight:600"></span></span>
     <button class="reset-btn" onclick="reset()">Reset</button>
@@ -39,5 +46,14 @@
     <button class="new game-btn" onclick="newGame()">NEW GAME</button>
 </div>
 <script src="./script.js"></script>
+<script src="https://kit.fontawesome.com/32648a8a86.js" crossorigin="anonymous"></script>
+<footer class="">
+    <p>**All my projects and more are able on Github. <i class="fa-brands fa-github"></i></p>
+    <p>
+      © Created by
+      <a href="https://www.github.com/hisahito" target="_blank">Hisahito</a>
+      with <i class="fa-brands fa-js"></i>
+    </p>
+  </footer>
 </body>
 </html>
