adding media querys in style.css and adding confetti script into script.js

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 </div>
 <script src="./script.js"></script>
 <script src="https://kit.fontawesome.com/32648a8a86.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 <footer class="">
     <p>**All my projects and more are able on Github. <i class="fa-brands fa-github"></i></p>
     <p>
