adding changes in media querys for mobile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </label>-->
                 </header>
 <div class="container">
-    <span class="wrong-guesses" >Wrong Guesses : <span class="mistake" style="font-weight:600">0</span> of <span class="max-wrong" style="font-weight:600"></span></span>
+    <span class="wrong-guesses" >Falladas : <span class="mistake" style="font-weight:600">0</span> of <span class="max-wrong" style="font-weight:600"></span></span>
     <button class="reset-btn" onclick="reset()">Reset</button>
 
     <div class="hangman-body">
@@ -49,7 +49,7 @@
 <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 <script src="https://kit.fontawesome.com/32648a8a86.js" crossorigin="anonymous"></script>
 <footer class="">
-    <p>**All my projects and more are able on Github. <i class="fa-brands fa-github"></i></p>
+    <p>All my projects and more are able on Github. <i class="fa-brands fa-github"></i></p>
     <p>
       © Created by
       <a href="https://www.github.com/hisahito" target="_blank">Hisahito</a>
